# spatialops-threadfix

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  NeboBuildTools.cmake  SpatialOpsConfig.cmake.in  SpatialOpsConfigure.h.in  SpatialOpsDoxygen.txt  SpatialOpsUse.cmake  WalterTest  WalterTest1  WalterTest2  WalterTest3  acinclude.m4  config.h.in  configure  configure.ac  postproc.m  spatialops-1.0.pc.in  spatialops.doxyfile
debian/: changelog  control  (+2 more)
examples/: 3D_Laplacian.h  CMakeLists.txt  Example1_field_creation.cpp  Example1_field_creation.txt  Example2_field_operations.cpp  Example2_field_operations.txt  Example3_5_field_types.cpp  Example3_5_field_types.txt  Example3_field_reductions.cpp  Example3_field_reductions.txt  Example4_field_type_inference.cpp  Example4_field_type_inference.txt  Example5_stencil_type_inference.cpp  Example5_stencil_type_inference.txt  Example6_3D_Laplacian.h  Example6_3D_Laplacian.txt  Example7_stencils.cpp  Example7_stencils.txt  Example8_masks.cpp  Example8_masks.txt  Example9_heat_equation.cpp  Example9_heat_equation.txt  Example_field_type_inference.cpp  Example_field_type_inference.txt  Examples.txt  field_creation.cpp  field_operations.cpp  field_reductions.cpp  field_type_inference.cpp  field_types.cpp  heat_equation.cpp  masks.cpp  stencil_type_inference.cpp  stencils.cpp
spatialops/: CMakeLists.txt  FieldExpressions.cpp  FieldExpressions.fmr  FieldExpressions.h  FieldExpressionsExtended.h  FieldExpressionsFDStencil2.fmr  FieldExpressionsFDStencil2.h  FieldExpressionsStencil2.fmr  FieldExpressionsStencil2.h  FieldExpressionsStencil4.fmr  FieldExpressionsStencil4.h  FieldExpressionsStencils.h  FieldFunctions.h  FieldOperationDefinitions.h  FieldOperations.h  FieldReductions.fmr  FieldReductions.h  FieldTill.h  FulmarAbbreviations.fmr  FulmarApplyPointwise.h  FulmarApplyPointwise.h.fmr  LagrangePoly.cpp  LagrangePoly.h  LinAlgTrilinos.cpp  LinAlgTrilinos.h  LinAlgUBlas.h  LinearSystem.cpp  LinearSystem.h  Nebo.h  NeboApplyPointwise.h  NeboApplyPointwise.h.  NeboAssignment.fmr  NeboAssignment.h  NeboAssignment.h.fmr  NeboBasic.fmr  NeboBasic.h  NeboBasic.h.fmr  NeboCond.fmr  NeboCond.h  NeboCond.h.fmr  (+34 more)
spatialops/particles/: CMakeLists.txt  ParticleFieldTypes.cpp  ParticleFieldTypes.h  ParticleOperators.h
spatialops/particles/test/: CMakeLists.txt  TestParticleOperators.cpp
spatialops/pointfield/: CMakeLists.txt  PointFieldTypes.h  PointOperators.h
spatialops/pointfield/test/: CMakeLists.txt  testPointField.cpp
spatialops/structured/: BitField.h  BoundaryCellInfo.h  CMakeLists.txt  CudaMMConfig.cmake.in  CudaMemoryAllocator.cu  CudaMemoryAllocator.h  ExternalAllocators.h  FVOneDimensional.cpp  FVOneDimensional.h  FVRestrictOp.h  FVStaggered.h  FVStaggeredBCTools.h  FVStaggeredDivergence.h  FVStaggeredFieldTypes.h  FVStaggeredGradient.h  FVStaggeredIndexHelper.h  FVStaggeredInterpolant.h  FVStaggeredLocationTypes.h  FVStaggeredOperatorTypes.h  FVStaggeredScratch.h  FVStaggeredTypes.h  FVTools.cpp  FVTools.h  FVTopHatFilter.h  FieldComparisons.h  FieldHelper.h  FieldInfo.h  FieldWriter.h  GPUtest.cu  GPUtest.h  GhostData.cpp  GhostData.h  Grid.cpp  Grid.h  IndexHexlet.h  IndexTriplet.h  IntVec.h  MemoryPool.cpp  MemoryPool.h  MemoryTypes.h  (+12 more)
spatialops/structured/matrix/: CMakeLists.txt  FVRestrictOp.h  FVStaggered.h  FVStaggeredBCOp.h  FVStaggeredDivergence.h  FVStaggeredGradient.h  FVStaggeredIndexHelper.h  FVStaggeredInterpolant.h  FVStaggeredOperatorTypes.h  FVStaggeredScratch.h
spatialops/structured/matrix/test/: CMakeLists.txt  Grid.cpp  Grid.h  bcTest.cpp  buildOps.cpp  restriction_test.cpp  testNew.cpp  testOpBC.cpp  testOperator.cpp  tophat_test.cpp
spatialops/structured/onedim/: CMakeLists.txt  FVOneDimensional.cpp  FVOneDimensional.h  FVStaggered1DOperatorTypes.h  LagrangePoly.cpp  LagrangePoly.h
spatialops/structured/stencil/: BoxFilter.cpp  BoxFilter.h  CMakeLists.txt  CudaStencil2.cu  CudaStencil2.h  CudaStencil2Bridge.h  CudaStencil4.cu  CudaStencil4.h  CudaStencil4Bridge.h  FDStencil2.cpp  FDStencil2.h  FVStaggered.h  FVStaggeredBCOp.h  FVStaggeredOperatorTypes.h  NullStencil.cpp  NullStencil.h  Stencil2.cpp  Stencil2.h  Stencil2_def.h  Stencil4.cpp  Stencil4.h  Stencil4_def.h  StencilBuilder.cpp  StencilBuilder.h
spatialops/structured/test/: CMakeLists.txt  CudaStencilLib.h  CudaVecLib.cu  ExternalStencilTest.cu  ExternalStencilTest.h  Grid.cpp  ctest.cpp  cu_lib.h  memtest1.cpp  memtest2.cpp  testExternalField.cpp  testExternalField.h  testFVTools.cpp  testField.cpp  testFieldComparisons.cpp  testGrid.cpp  testMask.cpp  testMemWindow.cpp  testNeboBC.cpp  testOperator.cpp  testSerialization.cpp  testTools.cpp  test_stencil.cpp  test_stencil2.cpp
spatialops/threadpool/threadpool/: pool.hpp  task_adaptors.hpp
spatialops/unstructured/: SpatialField.h
src/: .gdb_history  FVOneDimensional.cpp  FVStaggeredSpatialOps.cpp  FVTools.cpp  FVToolsTemplates.cpp  LagrangePoly.cpp  LinAlgTrilinos.cpp  LinAlgUBlas.cpp  LinearSystem.cpp  Makefile.am  Makefile.in  SpatialField.cpp  SpatialOperator.cpp  test.cpp
src/test/: Functions.h  Grid.h  Makefile.am  buildOps.cpp  buildOps.h  test.cpp  test.input  testNew.cpp  testPoisson.cpp  test_alberto.cpp
src/test/test_alberto/: analytical_class.h  grid.h  test_functions.h  utilities.h
test/: CMakeLists.txt  CondTest.cpp  ErrorTest.cpp  FieldHelper.h  FilterTest.cpp  Functions.h  GPUtest.cpp  Grid.cpp  Grid.h  Makefile.am  Makefile.in  NeboTest.cpp  ParallelAssignmentTest.cpp  PowTest.cpp  ScalingAssignmentTest.cpp  SimpleFieldTest.cpp  SimplePointwiseTest.cpp  StencilChainTest.cpp  StencilChainTill10Test.cpp  StencilChainTill20Test.cpp  StencilChainTill5Test.cpp  StencilTest.cpp  StencilTest1.cpp  StencilTest2.cpp  StencilTest3.cpp  StencilTest4.cpp  StencilTest5.cpp  StencilTest6.cpp  StencilTest7.cpp  StencilTest8.cpp  StencilTest9.cpp  StencilTestDeepChain.cpp  TestHelper.h  TestParticleOperators.cpp  TimeLogger.cpp  TimeLogger.h  bcTest.cpp  buildOps.cpp  buildOps.h  cond_test.cpp  (+11 more)
test/heatEqn/: CMakeLists.txt  main.cpp  tools.h
(+104 files in other folders)
